package com.bcopstein;

public enum Naipe {
    OUROS,
    PAUS,
    ESPADAS,
    COPAS
}